--- a/Product-portrait/index.html
+++ b/Product-portrait/index.html
@@ -6,5 +6,21 @@
     <title>Product-portrait</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="productshoe">
+      <figure>
+        <img src="adidas_superstar.png" alt="Adidas Superstar" />
+        <figcaption>SE2324234030</figcaption>
+      </figure>
+      <section>
+        <h1>Adidas Superstar</h1>
+        <h2>2019 Djungle Edition</h2>
+        <p>
+          It doesnt get any hotter then this. Rule the streets with this new
+          jungle flavored sneakers from Adidas.
+        </p>
+        <aside class="price">799sek</aside>
+      </section>
+    </div>
+  </body>
 </html>
